# estimate_prevalence

./: .gitignore  AGENT.md  Makefile  README.md  lstm.md  lstm.qmd  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: copilot-setup-steps.yml
data/: covid_data_utah.csv  covid_variants.csv  covid_variants.md  covid_variants.qmd  covid_variants_yearly.csv  nextstrain_ncov_gisaid_north-america_6m_timetree.nwk  nextstrain_ncov_gisaid_north-america_all-time_timetree.nwk
