[tool.poetry]
package-mode = false

[project]
name = "estimate-prevalence"
version = "0.1.0"
description = ""
authors = [
    {name = "George G. Vega Yon",email = "g.vegayon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow (>=2.20.0,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
